cmake_minimum_required(VERSION 3.15)
project(lab_ds)
find_package(Catch2 REQUIRED)
set(CMAKE_CXX_STANDARD 14)
add_executable(main main.cpp)
add_executable(llrb_test llrb_test.cpp)
add_executable(fibheap_test fibheap_test.cpp)
target_link_libraries(llrb_test Catch2::Catch2)
target_link_libraries(fibheap_test Catch2::Catch2)
include(CTest)
include(Catch)
catch_discover_tests(llrb_test fibheap_test)